--- a/public/frontend/scss/style.css
+++ b/public/frontend/scss/style.css
@@ -246,7 +246,7 @@ button {
 .s-content table, .s-content iframe {
   max-width: 100%; }
 .s-content a {
-  color: #e45200; }
+  color: #2891cc; }
 .s-content table {
   border-collapse: collapse;
   width: 100%;
