--- a/public/frontend/scss/mobile.css
+++ b/public/frontend/scss/mobile.css
@@ -177,7 +177,10 @@
     width: calc(100% - 145px); }
   .item-doctor .content {
     width: 100%;
-    margin-top: 10px; } }
+    margin-top: 10px; }
+
+  .all-sub-title.small-text {
+    font-size: 19px !important; } }
 @media (max-width: 767px) {
   .fs-16-cv {
     font-size: 14px !important; }
