--- a/public/frontend/scss/style.css
+++ b/public/frontend/scss/style.css
@@ -434,6 +434,26 @@ input:focus, textarea:focus {
     width: 180px; }
   .all-sub-title.medium:after {
     width: 130px; }
+  .all-sub-title.small-text {
+    font-size: 21px !important; }
+
+.all-title-detail {
+  font-size: 21px;
+  font-family: 'robotob';
+  line-height: 1.3;
+  position: relative;
+  padding-bottom: 10px;
+  padding-left: 15px; }
+  .all-title-detail:after {
+    content: '';
+    position: absolute;
+    height: 20px;
+    width: 5px;
+    border-radius: 5px;
+    background: #0c9849;
+    top: 50%;
+    left: 0;
+    margin-top: -11px; }
 
 .hv-main {
   color: #2891cc !important; }
