--- a/public/frontend/scss/style.scss
+++ b/public/frontend/scss/style.scss
@@ -66,7 +66,7 @@ input,textarea{
 	padding-bottom: 10px;
 	&:after{
 		content:'';
-		position: absolute;;
+		position: absolute;
 		height: 3px;
 		width: 80px;
 		background: $main;
@@ -88,6 +88,28 @@ input,textarea{
 		&:after{
 			width: 130px;
 		}
+	}
+	&.small-text{
+		font-size: 21px!important;
+	}
+}
+.all-title-detail{
+	font-size: 21px;
+	font-family: 'robotob';
+	line-height: 1.3;
+	position: relative;
+	padding-bottom: 10px;
+	padding-left: 15px;
+	&:after{
+		content:'';
+		position: absolute;
+		height: 20px;
+		width: 5px;
+		border-radius: 5px;
+		background: #0c9849;
+		top: 50%;
+		left: 0;
+		margin-top: -11px;
 	}
 }
 .hv-main{
