--- a/public/frontend/scss/mobile.css
+++ b/public/frontend/scss/mobile.css
@@ -249,6 +249,9 @@
   .fs-36-cv {
     font-size: 22px !important; }
 
+  .fs-21-cv {
+    font-size: 18px !important; }
+
   .btn-call {
     display: none; }
 
