--- a/public/frontend/scss/mobile.scss
+++ b/public/frontend/scss/mobile.scss
@@ -322,6 +322,9 @@ $cltext: #676767;
 	.fs-36-cv{
 		font-size: 22px !important;
 	}
+	.fs-21-cv{
+		font-size: 18px !important;
+	}
 	.btn-call{
 		display: none;
 	}
