--- a/public/frontend/scss/style.css
+++ b/public/frontend/scss/style.css
@@ -470,7 +470,11 @@ input:focus, textarea:focus {
     background: #0c9849;
     top: 50%;
     left: 0;
-    margin-top: -11px; }
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%); }
 
 .hv-main {
   color: #2891cc !important; }
@@ -1092,11 +1096,21 @@ html[lang='vi'] .header-top .search-box, html[lang='auto'] .header-top .search-b
 .footer-menu li {
   margin-bottom: 6px;
   position: relative;
-  padding-left: 15px; }
+  padding-left: 15px;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out; }
   .footer-menu li:before {
     content: '';
     position: absolute;
     top: 50%;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
     -webkit-transform: translateY(-50%);
     -moz-transform: translateY(-50%);
     -o-transform: translateY(-50%);
@@ -1107,6 +1121,10 @@ html[lang='vi'] .header-top .search-box, html[lang='auto'] .header-top .search-b
     height: 8px;
     left: 0;
     border-radius: 50%; }
+  .footer-menu li:hover {
+    color: #e57709; }
+    .footer-menu li:hover:before {
+      background: #e57709; }
 
 .copy-right {
   border-top: solid 1px #afafaf; }
@@ -2781,6 +2799,38 @@ html[lang='vi'] .btn-lang-vi, html[lang='auto'] .btn-lang-vi {
   .contact-btn:hover {
     background: white;
     color: #FFA901; }
+
+.module-form-search-question {
+  background: #ebebeb;
+  padding: 0px 10px;
+  border-radius: 10px; }
+  .module-form-search-question .form-search-question {
+    max-width: 500px; }
+
+.form-search-question {
+  width: 100%; }
+  .form-search-question input {
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    width: 100%;
+    height: 40px;
+    background: white !important;
+    border-radius: 40px;
+    border: solid 1px #e6e6e6;
+    padding-right: 50px; }
+  .form-search-question button {
+    position: absolute;
+    top: 0;
+    right: 5px;
+    width: 40px;
+    height: 40px;
+    color: #959595;
+    font-size: 20px; }
+    .form-search-question button:hover {
+      color: #e57709; }
 
 #orderExaminationSchedule .modal-content {
   border-radius: 10px; }
