--- a/public/frontend/scss/style.css
+++ b/public/frontend/scss/style.css
@@ -3050,4 +3050,32 @@ html[lang='vi'] .btn-lang-vi, html[lang='auto'] .btn-lang-vi {
   background-repeat: no-repeat;
   background-attachment: fixed; }
 
+.leadership-module, .certifications-module {
+  background: #f4f5f6; }
+
+.item-leadership .job {
+  color: #0A9949; }
+.item-leadership .content {
+  padding-top: 150px;
+  margin-top: -120px;
+  position: relative;
+  background: white;
+  box-shadow: 0px 8px 16px rgba(0, 126, 199, 0.1);
+  border-radius: 5px; }
+  .item-leadership .content:before {
+    content: '';
+    width: 35%;
+    height: 3px;
+    background: #0A9949;
+    z-index: 2;
+    bottom: 0;
+    left: 0; }
+  .item-leadership .content:after {
+    content: '';
+    width: 100%;
+    height: 3px;
+    background: linear-gradient(124.29deg, #18A1F0 2.15%, #006AA7 109.31%);
+    bottom: 0;
+    left: 0; }
+
 /*# sourceMappingURL=style.css.map */
