--- a/public/frontend/scss/style.scss
+++ b/public/frontend/scss/style.scss
@@ -3097,3 +3097,36 @@ html[lang='vi'],html[lang='auto']{
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 }
+.leadership-module,.certifications-module{
+	background: #f4f5f6;
+}
+.item-leadership{
+	.job{
+		color: #0A9949
+	}
+	.content{
+		padding-top: 150px;
+		margin-top: -120px;
+		position: relative;
+		background: white;
+		box-shadow: 0px 8px 16px rgba(0, 126, 199, 0.1);
+		border-radius: 5px;		
+		&:before{
+			content:'';
+			width: 35%;
+			height: 3px;
+			background: #0A9949;
+			z-index: 2;
+			bottom: 0;
+			left: 0;
+		}
+		&:after{
+			content:'';
+			width: 100%;
+			height: 3px;
+			background: linear-gradient(124.29deg, #18A1F0 2.15%, #006AA7 109.31%);
+			bottom: 0;
+			left: 0;
+		}
+	}
+}
