--- a/public/frontend/css/comment.css
+++ b/public/frontend/css/comment.css
@@ -1,6 +1,6 @@
 :root{
     --color-btn: white;
-    --color-main: #f598af;
+    --color-main: #2891cc;
     --color-hr: #ececec;
     --color-star-evalue: #c7c7c7;
     --color-admin: #008aff;
@@ -168,14 +168,13 @@ input.star:hover ~ label.star:before{
 .comment-box__content{
     background: var(--color-btn);
     border-radius: 1.125rem;
-    padding: 2rem 1.125rem;
     margin-bottom: 2rem;
 }
 .comment-item__top{
+    margin: 12px 0;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    padding: 16px 0;
 }
 .comment-item__img img{
     width: 100%;
@@ -208,7 +207,7 @@ p.comment-box__title:first-letter {
     flex: 1;
 }
 .comment-item__content{
-    margin: 16px 0;
+    margin: 12px 0;
 }
 .rating-score .rating{
     font-size: 1.125rem;
@@ -249,10 +248,7 @@ p.comment-box__title:first-letter {
     /* grid-template-columns: repeat( auto-fit, minmax(120px, 1fr) ); */
     grid-gap: 10px;
 }
-.comment-box__form{
-    display: flex;
-    flex-wrap: wrap;
-}
+
 .rep-comment textarea:focus{
     border: 1px solid var(--color-main);
     box-shadow: 0 0 6px 0.4px var(--color-main);
@@ -274,10 +270,10 @@ p.comment-box__title:first-letter {
     border: none;
     color: var(--color-main);
     background: var(--color-btn);
-    padding: 0.575rem;
+    padding: 0.125rem 0.575rem;
     cursor: pointer;
     border: 1px solid var(--color-main);
-    border-radius: 10px;
+    border-radius: 5px;
     transition: all 0.3s ease-in-out;
 }
 .comment-childs {
@@ -375,6 +371,7 @@ p.comment-box__title:first-letter {
 }
 .comment-item__datetime{
     font-size: 0.875rem;
+    font-weight: 300;
 }
 .comment-user__info.admin .user-info__name:after{
     content: 'QTV';
@@ -450,7 +447,7 @@ input:checked+.slider-item:before {
     background: var(--color-btn);
     color: var(--color-main);
     cursor: pointer;
-    border-radius: 10px;
+    border-radius: 5px;
     transition: all 0.3s ease-out;
 }
 
@@ -467,7 +464,7 @@ button.more-comment--child {
     border: 1px solid var(--color-main);
     color: white;
     margin: 12px 0;
-    border-radius: 10px;
+    border-radius: 5px;
     transition: all 0.3s ease-out;
     cursor: pointer;
     margin-left: 48px;
