--- a/public/frontend/scss/style.css
+++ b/public/frontend/scss/style.css
@@ -3051,12 +3051,18 @@ html[lang='vi'] .btn-lang-vi, html[lang='auto'] .btn-lang-vi {
   background-attachment: fixed; }
 
 .leadership-module, .certifications-module {
-  background: #f4f5f6; }
+  background: #f9f9f9; }
 
+.item-leadership .c-img {
+  z-index: 2;
+  width: calc(100% - 30px);
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0px 1px 5px 1px rgba(0, 0, 0, 0.1); }
 .item-leadership .job {
   color: #0A9949; }
 .item-leadership .content {
-  padding-top: 150px;
+  padding-top: 140px;
   margin-top: -120px;
   position: relative;
   background: white;
@@ -3064,6 +3070,7 @@ html[lang='vi'] .btn-lang-vi, html[lang='auto'] .btn-lang-vi {
   border-radius: 5px; }
   .item-leadership .content:before {
     content: '';
+    position: absolute;
     width: 35%;
     height: 3px;
     background: #0A9949;
@@ -3072,6 +3079,7 @@ html[lang='vi'] .btn-lang-vi, html[lang='auto'] .btn-lang-vi {
     left: 0; }
   .item-leadership .content:after {
     content: '';
+    position: absolute;
     width: 100%;
     height: 3px;
     background: linear-gradient(124.29deg, #18A1F0 2.15%, #006AA7 109.31%);
