--- a/public/frontend/scss/style.scss
+++ b/public/frontend/scss/style.scss
@@ -2501,6 +2501,11 @@ html[lang='vi'],html[lang='auto']{
 #google_translate_element2{
 	display: none;
 }
+.toc-wrapper{
+	position: sticky;
+	top: 0;
+	z-index: 2;
+}
 #toc_container {
     background: #f3f3f3;
     border: 1px solid #eeeeee;
